Update 102.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
@@ -254,5 +254,232 @@ grub rescue> insmod linux
 
 ## GRUB Legacy
 
-### Установка GRUB Legacy из работающей системы
+### Установка GRUB Legacy из запущенной системы
 
+Чтобы установить GRUB Legacy на диск из работающей системы, мы воспользуемся утилитой `grub-install`. Основная команда - `grub-install DEVICE`, где `DEVICE` - это диск, на который вы хотите установить GRUB Legacy. Примером может быть `/dev/sda`.
+```console
+# grub-install /dev/sda
+```
+Обратите внимание, что вам нужно указать `устройство`, на котором будет установлен GRUB Legacy, например `/dev/sda/`, а `не раздел`, как в `/dev/sda1`. 
+
+По умолчанию GRUB скопирует необходимые файлы в каталог `/boot` на указанном устройстве. Если вы хотите скопировать их в другой каталог, используйте параметр `--boot-directory=`, за которым следует полный путь к тому месту, куда файлы должны быть скопированы.
+
+
+### Установка GRUB Legacy из оболочки GRUB
+
+Если вы не можете загрузить систему по какой-либо причине и вам необходимо переустановить GRUB Legacy, вы можете сделать это из оболочки GRUB на загрузочном диске GRUB Legacy. 
+
+В оболочке GRUB (нажмите `c` в меню загрузки, чтобы перейти к приглашению `grub>`), первым делом нужно установить загрузочное устройство, которое содержит каталог `/boot`. Например, если этот каталог находится в первом разделе первого диска, команда будет выглядеть так:
+```console
+grub> root (hd0,0)
+```
+Если вы не знаете, какое устройство содержит каталог `/boot`, вы можете попросить GRUB найти его с помощью команды `find`, как показано ниже:
+```console
+grub> find /boot/grub/stage1
+ (hd0,0)
+ ```
+Затем установите загрузочный раздел, как описано выше, и используйте команду установки, чтобы установить GRUB Legacy в MBR и скопировать необходимые файлы на диск:
+```console
+grub> setup (hd0)
+```
+По завершении перезагрузите систему, и она должна загрузиться нормально.
+
+
+### Настройка записей и параметров меню устаревших версий GRUB
+
+Записи и настройки меню GRUB Legacy хранятся в файле `/boot/grub/menu.lst`. Это простой текстовый файл со списком команд и параметров, который можно редактировать прямо с помощью вашего любимого текстового редактора. 
+
+Строки, начинающиеся с символа `#`, считаются комментариями, а пустые строки игнорируются. Пункт меню содержит как минимум три команды. Первая, `title`, устанавливает заголовок операционной системы на экране меню. Вторая, `root`, сообщает GRUB Legacy, с какого устройства или раздела загружаться. 
+
+Третья запись, `kernel`, указывает полный путь к образу ядра, который должен быть загружен при выборе соответствующей записи. Обратите внимание, что этот путь относится к устройству, указанному в корневом параметре. 
+
+Вот простой пример:
+```console
+# This line is a comment
+title My Linux Distribution
+root (hd0,0)
+kernel /vmlinuz root=/dev/hda1
+```
+В отличие от GRUB2, в GRUB Legacy и диски, и разделы нумеруются с нуля. Итак, команда `root (hd0,0)` установит загрузочный раздел как первый раздел (`0`) первого диска (`hd0`). 
+
+Вы можете опустить оператор `root`, если вы укажете загрузочное устройство перед путем в команде ядра. Синтаксис такой же, поэтому:
+```console
+kernel (hd0,0)/vmlinuz root=dev/hda1
+```
+эквивалентно:
+```console
+root (hd0,0)
+kernel /vmlinuz root=/dev/hda1
+```
+Оба загрузят файл `vmlinuz` из корневого каталога (`/`) первого раздела первого диска (`hd0,0`). 
+
+Параметр `root=/dev/hda1` после команды ядра сообщает ядру Linux, какой раздел следует использовать в качестве корневой файловой системы. Это параметр ядра Linux, а не команда GRUB Legacy.
+
+>Чтобы узнать больше о параметрах ядра, см. Https://www.kernel.org/doc/html/v4.14/admin-guide/kernel-parameters.html.
+
+Возможно, вам потребуется указать расположение исходного образа RAM-диска для операционной системы с помощью параметра `initrd`. Полный путь к файлу можно указать, как в параметре ядра, и вы также можете указать устройство или раздел перед путем, например:
+```console
+# This line is a comment
+title My Linux Distribution
+root (hd0,0)
+kernel /vmlinuz root=/dev/hda1
+initrd /initrd.img
+```
+GRUB Legacy имеет модульную конструкцию, в которой модули (обычно хранящиеся как файлы `.mod` в `/boot/grub/i386-pc`) могут быть загружены для добавления дополнительных функций, таких как поддержка необычного оборудования, файловых систем или новых алгоритмов сжатия. 
+
+Модули загружаются с помощью команды `module`, за которой следует полный путь к соответствующему файлу `.mod`. Имейте в виду, что, как и ядра и образы `initrd`, этот путь относится к устройству, указанному в команде `root`. 
+
+В приведенном ниже примере загружается модуль `915resolution`, необходимый для правильной установки разрешения кадрового буфера в системах с видеочипсетами Intel серии 800 или 900.
+```console
+module /boot/grub/i386-pc/915resolution.mod
+```
+
+
+### Последовательная загрузка других операционных систем
+
+GRUB Legacy можно использовать для загрузки неподдерживаемых операционных систем, таких как Windows, с помощью процесса, называемого *chainloading*. Сначала загружается GRUB Legacy, и при выборе соответствующей опции загружается загрузчик для желаемой системы. 
+
+Типичная запись для последовательной загрузки Windows будет выглядеть следующим образом:
+```console
+# Load Windows
+title Windows XP
+root (hd0,1)
+makeactive
+chainload +1
+boot
+```
+Давайте пройдемся по каждому параметру. Как и раньше, `root (hd0,1)` указывает устройство и раздел, где находится загрузчик для операционной системы, которую мы хотим загрузить. В этом примере второй раздел первого диска. 
+
+* `makeactive`  
+установит флаг, указывающий, что это активный раздел. Это работает только с первичными разделами DOS. 
+
+* `chainload +1`  
+сообщает GRUB загрузить первый сектор загрузочного раздела. Здесь обычно находятся загрузчики. 
+
+* `boot`  
+запустит загрузчик и загрузит соответствующую операционную систему.
+
+
+## Упражнения для закрепления
+
+1. Какое расположение по умолчанию для файла конфигурации GRUB2? 
+
+2. Что нужно сделать, чтобы изменить настройки GRUB2? 
+
+3. В какой файл следует добавить пользовательские пункты меню GRUB2? 
+
+4. Где хранятся пункты меню для GRUB Legacy? 
+
+5. Как войти в оболочку GRUB из меню GRUB2 или GRUB Legacy?
+
+
+## Упражнения на размышление
+
+1. Представьте, что пользователь настраивает GRUB Legacy для загрузки со второго раздела первого диска. Он пишет следующий пользовательский пункт меню:
+```console
+title My Linux Distro
+root (hd0,2)
+kernel /vmlinuz root=/dev/hda1
+initrd /initrd.img
+```
+Однако система не загружается. Что не так?
+
+2. Представьте, что у вас есть диск, идентифицированный как `/dev/sda`, с несколькими разделами. Какую команду можно использовать для определения загрузочного раздела в системе? 
+
+3. Какую команду можно использовать для определения UUID раздела? 
+
+4. Рассмотрим следующую запись для GRUB2
+```console
+menuentry "Default OS" {
+    set root=(hd0,1)
+    linux /vmlinuz root=/dev/sda1 ro quiet splash
+    initrd /initrd.img
+}
+```
+Измените его, чтобы система загружалась с диска с UUID `5dda0af3-c995-481a-a6f3-46dcd3b6998d`
+
+5. Как вы можете настроить GRUB2 на ожидание 10 секунд перед загрузкой пункта меню по умолчанию? 
+
+6. Какие команды используются для установки GRUB в первый раздел второго диска в оболочке GRUB Legacy?
+
+
+## Резюме
+
+На этом уроке мы узнали Что такое загрузчик. 
+
+* Различия между GRUB Legacy и GRUB2. 
+* Что такое загрузочный раздел и каково его содержимое. 
+* Как установить GRUB Legacy и GRUB2. 
+* Как настроить GRUB Legacy и GRUB2. 
+* Как добавить пользовательские пункты меню в GRUB Legacy и GRUB2. 
+* Как взаимодействовать с экраном меню и консолью GRUB Legacy и GRUB2. 
+* Как загрузить систему из оболочки GRUB Legacy или GRUB2 или оболочки восстановления. 
+
+В этом уроке обсуждались следующие команды:  
+* `grub-install` 
+* `update-grub` 
+* `grub-mkconfig`
+
+
+## Ответы на упражнения для закрепления
+
+**1. Какое расположение по умолчанию для файла конфигурации GRUB2?**   
+`/boot/grub/grub.cfg`
+
+**2. Что нужно сделать, чтобы изменить настройки GRUB2?**  
+Внесите изменения в файл `/etc/default/grub`, затем обновите конфигурацию с помощью `update-grub`.
+
+**3. В какой файл следует добавить пользовательские пункты меню GRUB2?**  
+`/etc/grub.d/40_custom`
+
+**4. Где хранятся пункты меню для GRUB Legacy?**
+`/boot/grub/menu.lst`
+
+**5. Как войти в оболочку GRUB из меню GRUB2 или GRUB Legacy?**  
+Нажмите `c` на экране меню.
+
+
+## Ответы на упражнения для размышления
+
+**1. Представьте, что пользователь настраивает GRUB Legacy для загрузки со второго раздела первого диска. Он пишет следующий пользовательский пункт меню:
+```console
+title My Linux Distro
+root (hd0,2)
+kernel /vmlinuz root=/dev/hda1
+initrd /initrd.img
+```
+Однако система не загружается. Что не так?**  
+Неправильный загрузочный раздел. Помните, что, в отличие от GRUB2, GRUB Legacy считает разделы с *нуля*. Итак, правильная команда для второго раздела первого диска должна быть `root (hd0,1)`.
+
+**2. Представьте, что у вас есть диск, идентифицированный как `/dev/sda`, с несколькими разделами. Какую команду можно использовать для определения загрузочного раздела в системе?**  
+Используйте `fdisk -l /dev/sda`. Загрузочный раздел будет отмечен звездочкой (`*`) в списке.
+
+**3. Какую команду можно использовать для определения UUID раздела?**  
+Используйте `ls -la /dev/disk/by-uuid/` и найдите UUID, указывающий на раздел.
+
+**4. Рассмотрим следующую запись для GRUB2
+```console
+menuentry "Default OS" {
+    set root=(hd0,1)
+    linux /vmlinuz root=/dev/sda1 ro quiet splash
+    initrd /initrd.img
+}
+```
+Измените его, чтобы система загружалась с диска с UUID `5dda0af3-c995-481a-a6f3-46dcd3b6998d`**  
+Вам нужно будет изменить оператор `set root`. Вместо того, чтобы указывать диск и раздел, заставьте grub искать раздел с желаемым UUID.
+```console
+menuentry "Default OS" {
+    search --set=root --fs-uuid 5dda0af3-c995-481a-a6f3-46dcd3b6998d
+    linux /vmlinuz root=/dev/sda1 ro quiet splash
+    initrd /initrd.img
+}
+```
+
+**5. Как вы можете настроить GRUB2 на ожидание 10 секунд перед загрузкой пункта меню по умолчанию?**  
+Добавьте параметр `GRUB_TIMEOUT=10` в `/etc/default/grub`.
+
+**6. Какие команды используются для установки GRUB в первый раздел второго диска в оболочке GRUB Legacy?**  
+```console
+grub> root (hd1,0)
+grub> setup (hd1)
+```
