Update 102.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
@@ -457,7 +457,7 @@ initrd /initrd.img
 **3. Какую команду можно использовать для определения UUID раздела?**  
 Используйте `ls -la /dev/disk/by-uuid/` и найдите UUID, указывающий на раздел.
 
-**4. Рассмотрим следующую запись для GRUB2
+**4. Рассмотрим следующую запись для GRUB2**  
 ```console
 menuentry "Default OS" {
     set root=(hd0,1)
