Update 102.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
@@ -441,14 +441,14 @@ menuentry "Default OS" {
 
 ## Ответы на упражнения для размышления
 
-**1. Представьте, что пользователь настраивает GRUB Legacy для загрузки со второго раздела первого диска. Он пишет следующий пользовательский пункт меню:
+**1. Представьте, что пользователь настраивает GRUB Legacy для загрузки со второго раздела первого диска. Он пишет следующий пользовательский пункт меню:**
 ```console
 title My Linux Distro
 root (hd0,2)
 kernel /vmlinuz root=/dev/hda1
 initrd /initrd.img
 ```
-Однако система не загружается. Что не так?**  
+**Однако система не загружается. Что не так?**  
 Неправильный загрузочный раздел. Помните, что, в отличие от GRUB2, GRUB Legacy считает разделы с *нуля*. Итак, правильная команда для второго раздела первого диска должна быть `root (hd0,1)`.
 
 **2. Представьте, что у вас есть диск, идентифицированный как `/dev/sda`, с несколькими разделами. Какую команду можно использовать для определения загрузочного раздела в системе?**  
@@ -465,7 +465,7 @@ menuentry "Default OS" {
     initrd /initrd.img
 }
 ```
-Измените его, чтобы система загружалась с диска с UUID `5dda0af3-c995-481a-a6f3-46dcd3b6998d`**  
+**Измените его, чтобы система загружалась с диска с UUID `5dda0af3-c995-481a-a6f3-46dcd3b6998d`**  
 Вам нужно будет изменить оператор `set root`. Вместо того, чтобы указывать диск и раздел, заставьте grub искать раздел с желаемым UUID.
 ```console
 menuentry "Default OS" {
