Update 102.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
@@ -10,4 +10,54 @@
 
 ## Введение
 
-В этом уроке мы обсудим разделяемые библиотеки, также известные как общие объекты: части скомпилированного многократно используемого кода, такие как функции или классы, которые периодически используются различными программами. Для начала мы объясним, что такое разделяемые библиотеки, как их идентифицировать и где они находятся. Далее мы рассмотрим, как настроить места их хранения. Наконец, мы покажем, как искать разделяемые библиотеки, от которых зависит конкретная программа.
+В этом уроке мы обсудим *общие библиотеки*, также известные как *общие объекты*: части скомпилированного многократно используемого кода, такие как функции или классы, которые периодически используются различными программами. 
+
+Для начала мы объясним, что такое общие библиотеки, как их идентифицировать и где они находятся. Далее мы рассмотрим, как настроить места их хранения. Наконец, мы покажем, как искать общие библиотеки, от которых зависит конкретная программа.
+
+
+## Концепция общих библиотек
+
+Подобно своим физическим аналогам, программные библиотеки представляют собой наборы кода, которые предназначены для использования множеством различных программ; так же, как в физических библиотеках хранятся книги и другие ресурсы, которыми могут пользоваться разные люди. 
+
+Чтобы создать исполняемый файл из исходного кода программы, необходимо выполнить два важных шага. Во-первых, *компилятор* превращает исходный код в машинный код, который хранится в так называемых *объектных файлах*. Во-вторых, *компоновщик* объединяет объектные файлы и связывает их с библиотеками, чтобы сгенерировать окончательный исполняемый файл. Это связывание может быть *статическим* или *динамическим*. В зависимости от того, какой метод мы выберем, мы будем говорить о статических библиотеках или, в случае динамической компоновки, об общих библиотеках. Поясним их различия. 
+
+* Статические библиотеки  
+Статическая библиотека объединяется с программой во время компоновки. Копия кода библиотеки встраивается в программу и становится ее частью. Таким образом, программа не зависит от библиотеки во время выполнения, потому что программа уже содержит код библиотеки. Отсутствие зависимостей можно рассматривать как преимущество, поскольку вам не нужно беспокоиться о том, чтобы используемые библиотеки всегда были доступны. С другой стороны, статически связанные программы тяжелее. 
+
+* Общие(или динамические) библиотеки  
+В случае общих библиотек компоновщик просто заботится о том, чтобы программа правильно ссылалась на библиотеки. Однако компоновщик не копирует код библиотеки в файл программы. Хотя во время выполнения общая библиотека должна быть доступна для удовлетворения зависимостей программы. Это экономичный подход к управлению системными ресурсами, поскольку он помогает уменьшить размер программных файлов, и в память загружается только одна копия библиотеки, даже если она используется несколькими программами.
+
+
+## Соглашения об именах файлов общих объектов
+
+Имя общей библиотеки, также известное как *soname*, следует шаблону, который состоит из трех элементов: 
+* Имя библиотеки (обычно с префиксом `lib`) 
+* `so` (что означает «общий объект») 
+* Номер версии библиотеки 
+
+Вот пример: `libpthread.so.0` 
+
+Имена статических библиотек, напротив, заканчиваются на `.a`, например `libpthread.a`.
+
+>Поскольку файлы, содержащие общие библиотеки, должны быть доступны при выполнении программы, большинство систем Linux содержат общие библиотеки. Поскольку статические библиотеки требуются только в выделенном файле при компоновке программы, они могут отсутствовать в системе конечного пользователя.
+
+`glibc` (библиотека GNU C) - хороший пример общей библиотеки. В системе Debian GNU/Linux 9.9 ее файл называется `libc.so.6`. Такие довольно общие имена файлов обычно представляют собой символические ссылки, указывающие на фактический файл, содержащий библиотеку, имя которой содержит точный номер версии. В случае `glibc` эта символическая ссылка выглядит так:
+```console
+$ ls -l /lib/x86_64-linux-gnu/libc.so.6
+lrwxrwxrwx 1 root root 12 feb  6 22:17 /lib/x86_64-linux-gnu/libc.so.6 -> libc-2.24.so
+```
+Этот шаблон ссылки на файлы общей библиотеки, названный конкретной версией, с помощью более общих имен файлов, является обычной практикой. 
+
+Другие примеры общих библиотек включают `libreadline` (которая позволяет пользователям редактировать командные строки по мере их ввода и включает поддержку режимов редактирования Emacs и vi), `libcrypt` (которая содержит функции, связанные с шифрованием, хешированием и кодированием) или `libcurl` ( которая представляет собой многопротокольную библиотеку передачи файлов). Общие расположения общих библиотек в системе Linux: 
+
+* `/lib/`
+* `lib32`
+* `/lib64
+* `usr/lib/` 
+* `/usr/local/lib`
+
+>Концепция общих библиотек не является эксклюзивной для Linux. В Windows, например, они называются DLL, что означает динамически подключаемые библиотеки.
+
+
+## Конфигурация путей к общей библиотеке
+
