--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
@@ -143,3 +143,68 @@ export LD_LIBRARY_PATH=/usr/local/mylib
 
 
 ## Поиск зависимостей конкретного исполняемого файла
+
+Чтобы найти общие библиотеки, необходимые для конкретной программы, используйте команду `ldd`, за которой следует абсолютный путь к программе. Вывод показывает путь к файлу общей библиотеки, а также шестнадцатеричный адрес памяти, по которому он загружен:
+```console
+$ ldd /usr/bin/git
+    linux-vdso.so.1 =>  (0x00007ffcbb310000)
+	libpcre.so.3 => /lib/x86_64-linux-gnu/libpcre.so.3 (0x00007f18241eb000)
+	libz.so.1 => /lib/x86_64-linux-gnu/libz.so.1 (0x00007f1823fd1000)
+	libresolv.so.2 => /lib/x86_64-linux-gnu/libresolv.so.2 (0x00007f1823db6000)
+	libpthread.so.0 => /lib/x86_64-linux-gnu/libpthread.so.0 (0x00007f1823b99000)
+	librt.so.1 => /lib/x86_64-linux-gnu/librt.so.1 (0x00007f1823991000)
+	libc.so.6 => /lib/x86_64-linux-gnu/libc.so.6 (0x00007f18235c7000)
+	/lib64/ld-linux-x86-64.so.2 (0x00007f182445b000)
+```
+Точно так же мы используем `ldd` для поиска зависимостей общего объекта:
+```console
+$ ldd /lib/x86_64-linux-gnu/libc.so.6
+	/lib64/ld-linux-x86-64.so.2 (0x00007fbfed578000)
+	linux-vdso.so.1 (0x00007fffb7bf5000)
+```
+С параметром `-u` (или `--unused`) `ldd` выводит неиспользуемые прямые зависимости (если они существуют):
+```console
+$ ldd -u /usr/bin/git
+Unused direct dependencies:
+	/lib/x86_64-linux-gnu/libz.so.1
+	/lib/x86_64-linux-gnu/libpthread.so.0
+	/lib/x86_64-linux-gnu/librt.so.1
+```
+Причина неиспользуемых зависимостей связана с параметрами, используемыми компоновщиком при построении двоичного файла. Хотя программе не нужна неиспользуемая библиотека, она все же связана и помечена как `NEEDED` в информации об объектном файле. Вы можете исследовать это с помощью таких команд, как `readelf` или `objdump`, которые вы скоро будете использовать в исследовательском упражнении.
+
+
+## Упражнения для закрепления
+
+1. Разделите следующие имена общих библиотек на части:
+| **Полное имя файла**   | **Название библиотеки** | ***so* суффикс** | **Номер версии** |
+|:-----------------------|:------------------------|:-----------------|:-----------------|
+| `linux-vdso.so.1`      |                         |                  |                  |  
+| `libprocps.so.6`       |                         |                  |                  |
+| `libdl.so.2`           |                         |                  |                  |  
+| `libc.so.6`            |                         |                  |                  |
+| `libsystemd.so.0`      |                         |                  |                  |  
+| `ld-linux-x86-64.so.2` |                         |                  |                  |
+
+2. Вы разработали часть программного обеспечения и хотите добавить в свою систему новый каталог общей библиотеки (`/opt/lib/mylib`). Вы указываете его абсолютный путь в файле `mylib.conf`. 
+* В какой каталог вы должны поместить этот файл? 
+* Какую команду следует запустить, чтобы изменения полностью вступили в силу?
+
+3. Какую команду вы бы использовали для вывода списка общих библиотек, необходимых для `kill`?
+
+
+## Упражнения на размышление
+
+1. `objdump` - это утилита командной строки, которая отображает информацию из объектных файлов. Проверьте, установлен ли он в вашей системе с помощью файла `objdump`. Если это не так, установите его. 
+* Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep` для вывода зависимостей `glibc`: 
+* Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep`, чтобы вывести soname `glibc`: Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep` для вывода зависимостей Bash:
+
+
+## Резюме
+
+
+
+## Ответы на упражнения для закрепления
+
+
+
+## Ответы на упражнения для размышления
