Update 102.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
@@ -196,15 +196,83 @@ Unused direct dependencies:
 
 1. `objdump` - это утилита командной строки, которая отображает информацию из объектных файлов. Проверьте, установлен ли он в вашей системе с помощью файла `objdump`. Если это не так, установите его. 
 * Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep` для вывода зависимостей `glibc`: 
-* Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep`, чтобы вывести soname `glibc`: Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep` для вывода зависимостей Bash:
+* Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep`, чтобы вывести soname `glibc`: 
+* Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep` для вывода зависимостей Bash:
 
 
 ## Резюме
 
+Из этого урока вы узнали: 
+* Что такое общая (или динамическая) библиотека. 
+* Различия между общими и статическими библиотеками. 
+* Имена общих библиотек (*sonames*). 
+* Предпочтительное расположение общих библиотек в системе Linux, например `/lib` или `/usr/lib`. 
+* Назначение динамического компоновщика `ld.so` (или `ld-linux.so`). 
+* Как настроить пути к общим библиотекам с помощью файлов в `/etc/`, таких как `ld.so.conf` или файлов в каталоге `ld.so.conf.d`. 
+* Как настроить пути к общей библиотеке с помощью переменной среды `LD_LIBRARY_PATH`. 
+* Как найти зависимости исполняемых файлов и общих библиотек. 
+
+Команды, используемые в этом уроке: 
+
+`ls`  
+Список содержимого каталога. 
+
+`cat`  
+Объедините файлы и распечатайте их на стандартный вывод. 
+
+`sudo`  
+Попросите суперпользователя выполнить команду с правами администратора. 
+
+`ldconfig`  
+Настройте привязки динамического компоновщика во время выполнения. 
+
+`echo`  
+Отображение значения переменной окружения. 
+
+`export`  
+Экспорт значения переменной окружения в дочерние оболочки. 
+
+`unset`  
+Удалить переменную окружения. 
+
+`ldd`  
+Распечатать зависимости общих объектов программы. 
+
+`Readelf`  
+Отображение информации о файлах ELF (ELF означает исполняемый и связываемый формат). 
+
+`objdump`  
+Распечатать информацию из объектных файлов.
 
 
 ## Ответы на упражнения для закрепления
 
+1. Разделите следующие имена общих библиотек на части:
+| **Полное имя файла**   | **Название библиотеки** | ***so* суффикс** | **Номер версии** |
+|:-----------------------|:------------------------|:-----------------|:-----------------|
+| `linux-vdso.so.1`      | `linux-vdso`            | `so`             | `1`              |  
+| `libprocps.so.6`       | `libprocps`             | `so`             | `6`              |
+| `libdl.so.2`           | `libdl`                 | `so`             | `2`              |  
+| `libc.so.6`            | `libc`                  | `so`             | `6`              |
+| `libsystemd.so.0`      | `libsystemd`            | `so`             | `0`              |  
+| `ld-linux-x86-64.so.2` | `ld-linux-x86-64`       | `so`             | `2`              |
+
+2. Вы разработали часть программного обеспечения и хотите добавить в свою систему новый каталог общей библиотеки (`/opt/lib/mylib`). Вы указываете его абсолютный путь в файле `mylib.conf`. 
+* В какой каталог вы должны поместить этот файл?  
+`/etc/ld.so.conf.d`
+* Какую команду следует запустить, чтобы изменения полностью вступили в силу?  
+`ldconfig`
+
+3. Какую команду вы бы использовали для вывода списка общих библиотек, необходимых для `kill`?  
+`ldd /bin/kill`
 
 
 ## Ответы на упражнения для размышления
+
+1. `objdump` - это утилита командной строки, которая отображает информацию из объектных файлов. Проверьте, установлен ли он в вашей системе с помощью файла `objdump`. Если это не так, установите его. 
+* Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep` для вывода зависимостей `glibc`:  
+`objdump -p /lib/x86_64-linux-gnu/libc.so.6 | grep NEEDED`
+* Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep`, чтобы вывести soname `glibc`:  
+`objdump -p /lib/x86_64-linux-gnu/libc.so.6 | grep SONAME`
+* Используйте `objdump` с параметром `-p` (или `--private-headers`) и `grep` для вывода зависимостей Bash:  
+`objdump -p /bin/bash | grep NEEDED`
