--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
@@ -52,7 +52,7 @@ lrwxrwxrwx 1 root root 12 feb  6 22:17 /lib/x86_64-linux-gnu/libc.so.6 -> libc-2
 
 * `/lib/`
 * `lib32`
-* `/lib64
+* `/lib64`
 * `usr/lib/` 
 * `/usr/local/lib`
 
